# zero2prod

./: Cargo.toml  configuration.toml
.github/workflows/: audit.yml  check.yml
scripts/: init-db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  routes.rs
