[package]
edition = "2021"
name = "zero2prod"
version = "0.1.0"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
config = "0.13"
serde = {version = "1", features = ["derive"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}

[dependencies.sqlx]
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]
version = "0.6.1"

[dev-dependencies]
reqwest = "0.11"
